src/features/user/ProfileV2/styles/MyProfile.module.scss
@import './../../../../theme/theme';


.iconContainer {
    border-radius: 50%;
    position: absolute;
    top: 32px;
    right: 32px;
    height: 37px;
    width: 37px;
    background-color: #c5f097;
    cursor: pointer;
    .icon {
        margin-left: 6px;
        margin-top: 6px;
    }
}

.buttonContainer {
    display: flex;
    flex-wrap: wrap;
    gap: 12px;
}

.userDescription {
    margin-top: 15px;
}


.userInfoContainer {
    display: flex;
    gap: 15px;
    align-items: center;
   @include xsPhoneView {
    display: contents;
   }
    .userInfo {
        font-size: 36px;
        font-weight: bold;
    }
}

